1999-01-14  Yo Ric Dude  <ericmit@ix.netcom.com>

	* players.c: fix the recorder_write and monitor_write function to
 	use translate function.
 	
	* clients.c: fixes to the pause vs. sleep issue. select()s forever
 	if nothing to do, i.e. not recording and no samples playing.
  	
	* esd-server.h, mix.c, esd.c, filter.c, proto.c: translate
 	function pointers sketched out.  added a mixer engine debug
 	switch. filters, recorders and monitors are most likely horribly
 	broken for now.
 	
	* README, TODO: cleanups, updates, typos

Thu Jan 14 22:52:02 PST 1999 Manish Singh <yosh@gimp.org>

	* esd.c: corrected -d help text

	* esdctl.c: 0 is a perfectly valid argument for volumes, so don't
	filter it out

	* esddsp.in: libdl isn't everywhere, don't specify it (libtool
	deps will take care of that)

	* Makefile.am
	* configure.in: check for libdl

	* acinclude.m4
	* ltconfig
	* ltmain.sh: libtool 1.2d for linux shared library deps

1999-01-13  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, esd.c, mix.c, players.c, samples.c: first take at
 	using function pointers for the mix functions.  probably breaks
 	filters, and who knows what else.  NOTE: work in progress, beware!

1999-01-10  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esddsp.in: corrected format of LD_PRELOAD entries, and added
	LD_PRELOAD_PATH to make things a bit cleaner.  Should correct the
	"error loading shared libs: symbol dlsym not found" problems

1998-12-30  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esdmgr.c, proto.c: workaround for zero additional data protocol
	handlers.  just require an int of data for now. fix noted in source. 

	* audio.c, audio_alsa.c, audio_oss.c, audio_solaris.c, esd.c,
 	esd.h: added -d DEVICE option - use an alternate audio device.
  	This sets esd_audio_device (const char *) which can be used by the
 	platform specific esd_audio_open() functions.  audio_oss updated,
 	audio_solaris updated but not tested.  other updates requested.
